--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Almasii Image Feeds</string>
     <string name="image_feeds">Image Feeds</string>
     <string name="initializing">Initializing</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
